Se creo un completo diseño en multiproceso y se creo el spooler
12 / 02 / 2019